--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.2.34",
   "private": true,
   "scripts": {
-    "start:dev": "next dev",
-    "build": "next build",
-    "build:stage": "next build",
-    "export": "next build && next export",
-    "start": "next start"
+    "start:dev": "export NODE_OPTIONS=--openssl-legacy-provider && next dev",
+    "build": "export NODE_OPTIONS=--openssl-legacy-provider && next build",
+    "build:stage": "export NODE_OPTIONS=--openssl-legacy-provider && next build",
+    "export": "export NODE_OPTIONS=--openssl-legacy-provider && next build && next export",
+    "start": "export NODE_OPTIONS=--openssl-legacy-provider && next start"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.4",
